# PreparationThesis.TDD.Code

./: CMakeLists.txt  README.md
CMakeMacros/MacOSXBundle/: MacOSXBundle.cmake
applications/AllTest/: CMakeLists.txt  CMakePackage.cmake
applications/Base/: CMakeLists.txt
applications/BaseTest/: CMakeLists.txt  CMakePackage.cmake
applications/CocoaApp/: CMakeLists.txt  main.mm
applications/CocoaIRMB.main/: 3rdPartyLinking.cmake  CMakeLists.txt  CMakePackage.cmake  CocoaFileFinder.h  CocoaFileFinder.mm  CocoaIRMBPropertiesModelFactory.h  CocoaIRMBPropertiesModelFactory.mm  CocoaIRMBSolutionItemFactory.h  CocoaIRMBSolutionItemFactory.mm  CocoaIRMBViewComponentFactory.h  CocoaIRMBViewComponentFactory.mm  NSOpenFileDelegate.h  NSOpenFileDelegate.mm  main.mm
applications/CocoaViews/: 3rdPartyLinking.cmake  CMakeLists.txt  CMakePackage.cmake
applications/CrossHierarchies/: 3rdPartyLinking.cmake  CMakeLists.txt
applications/CrossHierarchiesTest/: CMakeLists.txt  CMakePackage.cmake
applications/CrossNative/: CMakeLists.txt
applications/CrossNativeTest/: CMakeLists.txt  CMakePackage.cmake  main.cpp
applications/CrossViews/: CMakeLists.txt
applications/CrossViewsTest/: CMakeLists.txt  CMakePackage.cmake
applications/GridGenerator/: 3rdPartyLinking.cmake  CMakeLists.txt  CMakePackage.cmake
applications/Hierarchies/: CMakeLists.txt
applications/HierarchiesTest/: 3rdPartyLinking.cmake  CMakeLists.txt  CMakePackage.cmake
applications/IRMB/: 3rdPartyLinking.cmake  CMakeLists.txt
applications/IRMBTest/: CMakeLists.txt  CMakePackage.cmake
applications/QtApp/: 3rdPartyLinking.cmake  CMakeLists.txt  main.cpp
applications/QtIRMB.main/: CMakeLists.txt  CocoaIRMBViewComponentFactory.cpp  CocoaIRMBViewComponentFactory.h  QtFileFinder.cpp  QtFileFinder.h  QtIRMBPropertiesModelFactory.cpp  QtIRMBPropertiesModelFactory.h  QtIRMBSolutionItemFactory.cpp  QtIRMBSolutionItemFactory.h  QtIRMBViewComponentFactory.cpp  QtIRMBViewComponentFactory.h  main.cpp
applications/QtViews/: 3rdPartyLinking.cmake  CMakeLists.txt
applications/QtViewsTest/: CMakeLists.txt  CMakePackage.cmake
applications/VTKWriter/: 3rdPartyLinking.cmake  CMakeLists.txt
src/Base/: Base_EXPORT.h
src/CocoaViews/: CocoaViews_EXPORT.h
src/CrossViews/: CrossViews_EXPORT.h
src/GridGenerator/: Core_EXPORT.h  GridGenerator_EXPORT.h
src/IRMB/: IRMB_EXPORT.h
(+729 files in other folders)
